<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="karpat.guvencan.contactapp.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/toDetailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/toEditFragment"
            app:destination="@id/editFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="karpat.guvencan.contactapp.ui.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/detail_fragment">

        <action
            android:id="@+id/toEditFragment"
            app:destination="@id/editFragment" />

        <action
            android:id="@+id/toHomeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/homeFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/editFragment"
        android:name="karpat.guvencan.contactapp.ui.edit.EditFragment"
        android:label="@string/edit"
        tools:layout="@layout/edit_fragment" >

        <action
            android:id="@+id/toHomeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/homeFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>